--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,21 @@ body{
 }
 
 .top-banner{
-    background-image: url(../images/bg/donation8.jpg);
+    background-image: url(../images/bg/donation13.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
-    height: 400px;
-}
-
-.banner-text{
-    /* width: 60%; */
-    line-height: 1.5em;
-    height: 3em;
-}
-
-.banner-text h1{
-    font-size: 35px;
+    height: 350px;
     color: white;
-    /* margin-top: 0%; */
 }
-
+.banner-text h1{
+    font-size: 45px;
+}
+.banner-text p{
+    color:floralwhite;
+}
 .tomato-button{
     text-decoration: none;
     background-color: tomato;
