--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,21 @@ body{
     margin-bottom: 50px;
 }
 
+#donate-now h1{
+    font-size: 2.0rem;
+    color: green;
+
+}
+
+
 #donate-now p{
+    margin-bottom: 10px;
     color: rgb(152, 147, 147);
     font-family: sans-serif;
 }
 
-.donate-box-container{
+.box-container{
+    margin: 10px 80px;
     display: flex;
     justify-content: center;
 }
@@ -82,4 +91,23 @@ body{
 
 #donate-input-text:focus{
     outline: none;
+}
+
+#donate-plan{
+    margin-top: 10%;
+    text-align: center;
+}
+
+#donate-plan h1{
+    font-size: 2.0rem;
+    color: green;
+
+}
+
+#donate-plan p{
+    margin-bottom: 4%;
+}
+
+.donate-plan-box{
+    width: 80%;
 }
