--- a/css/style.css
+++ b/css/style.css
@@ -152,9 +152,16 @@ body{
 #update-section h1{
     font-size: 2.0rem;
     color: tomato;
+    margin-bottom: 0px;;
 }
 
-#update-section p{
+#update-section-details{
+    display: flex;
+    justify-content: center;
+}
+
+#update-section-details p{
+    width: 50%;
     margin-bottom: 10px;
     color: rgb(152, 147, 147);
     font-family: sans-serif;
