--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,21 @@ body{
 }
 
 #campaign-container{
+    margin: 2% 10%;
+    justify-content: center;
     display: flex;
+    width: 80%
+}
+
+.campaign-item{
+    margin: 5%;
+    padding: 1%;
+    width: 40%;
+    background-color: #f0ffff;
+}
+
+.campaign-item img{
+    width: 90%;
 }
 
 #update-section{
