--- a/css/style.css
+++ b/css/style.css
@@ -145,17 +145,19 @@ body{
 }
 
 #recent-campaigns{
- text-align: center;
- margin-top: 5%;
+    background-color: rgb(248, 249, 250);
+    text-align: center;
+    margin-top: 5%;
 }
 
 #recent-campaigns h1{
+    margin-bottom: 0;
     font-size: 2.0rem;
     color: rgb(15, 98, 15);
 }
 
 #campaign-container{
-    margin: 2% 10%;
+    margin: 0% 10%;
     justify-content: center;
     display: flex;
     width: 80%
@@ -163,13 +165,27 @@ body{
 
 .campaign-item{
     margin: 5%;
-    padding: 1%;
-    width: 40%;
+    padding: 2%;
+    width: 60%;
     background-color: #f0ffff;
 }
 
 .campaign-item img{
     width: 90%;
+}
+
+.campaign-item p{
+    font-size: 12px;
+    padding: 0% 4%;
+    font-family: sans-serif;
+    text-align: justify;
+}
+
+.read-more{
+    font-weight: 700;
+    background-color: hsla(0, 0%, 85%, 0.687);
+    padding: 1px 5px;
+    border-radius: 2px;
 }
 
 #update-section{
