--- a/css/style.css
+++ b/css/style.css
@@ -156,22 +156,53 @@ body{
     color: rgb(15, 98, 15);
 }
 
+#campaign-box{
+    margin: 0% 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#left-arrow{
+    width: 10%;
+}
+
+#left-arrow img{
+    width: 50%;
+}
+
+.arrow-text{
+    font-size: 10px;
+    margin: 0%;
+    font-family:'Times New Roman', Times, serif;
+}
+
+#right-arrow{
+    width: 10%;
+}
+
+#right-arrow img{
+    width: 50%;
+}
+
 #campaign-container{
-    margin: 0% 10%;
+    margin: 0% 5%;
     justify-content: center;
     display: flex;
-    width: 80%
+    width: 100%
 }
 
 .campaign-item{
-    margin: 5%;
+    margin: 2%;
     padding: 2%;
-    width: 60%;
+    width: 80%;
     background-color: #f0ffff;
+    box-shadow: 4px 4px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
 .campaign-item img{
     width: 90%;
+    border-radius: 5px;
 }
 
 .campaign-item p{
